<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/points_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nova.ddis.PointsActivity"
    tools:showIn="@layout/app_bar_main_points">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="200px"
        android:gravity = "center"
        android:layout_centerHorizontal="true"
        android:id = "@+id/numPoints"
        android:text = "0"
        android:textSize="125px" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity = "center"
        android:id="@+id/textPoints"
        android:layout_below="@+id/numPoints"
        android:text="Points"
        android:textSize="70px"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height = "1200px"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:weightSum="2"
                >
                <Button
                    android:id="@+id/button1"
                    android:layout_width="400px"
                    android:layout_height="400px"
                    android:textSize = "60px"
                    android:text="@string/button1Name"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="right"
                    android:background="@drawable/brazo3"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="400px"
                    android:layout_height="400px"
                    android:textSize = "60px"
                    android:text="@string/button2Name"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="left"
                    android:background="@drawable/chipotle4"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:weightSum="2"
                >
                <Button
                    android:id="@+id/button3"
                    android:layout_width="400px"
                    android:layout_height="400px"
                    android:textSize = "60px"
                    android:text="@string/button3Name"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="right"
                    android:background="@drawable/christian"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="400px"
                    android:layout_height="400px"
                    android:text="@string/button4Name"
                    android:textSize = "60px"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="left"
                    android:background="@drawable/citizen4"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:weightSum="2"
                >
                <Button
                    android:id="@+id/button5"
                    android:layout_width="400px"
                    android:layout_height="400px"
                    android:textSize = "60px"
                    android:text="@string/button5Name"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="right"
                    android:background="@drawable/cucinova4"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="400px"
                    android:layout_height="400px"
                    android:text="Wings Out"
                    android:textSize = "60px"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="left"
                    android:background="@drawable/wings4"
                    android:layout_weight="1"/>
            </TableRow>

            <!--<TableRow-->
                <!--android:weightSum="2"-->
                <!--&gt;-->
                <!--<Button-->
                    <!--android:id="@+id/button9"-->
                    <!--android:layout_width="400px"-->
                    <!--android:layout_height="400px"-->
                    <!--android:textSize = "60px"-->
                    <!--android:text="@string/button9Name"-->
                    <!--android:textColor="#FFFFFF"-->
                    <!--android:layout_gravity="right"-->
                    <!--android:background="@drawable/roots"-->
                    <!--android:layout_weight="1"-->
                    <!--/>-->

                <!--<Button-->
                    <!--android:id="@+id/button10"-->
                    <!--android:layout_width="400px"-->
                    <!--android:layout_height="400px"-->
                    <!--android:text="@string/button10Name"-->
                    <!--android:textSize = "60px"-->
                    <!--android:textColor="#FFFFFF"-->
                    <!--android:layout_gravity="right"-->
                    <!--android:background="@drawable/wings"-->
                    <!--android:layout_weight="1"/>-->
            <!--</TableRow>-->

        </TableLayout>

        </LinearLayout>
</ScrollView>

</RelativeLayout>